--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
-{% include cv_header.html %}
+{% include main_header.html %}
+{% include cv_content.html %}
+{% include main_footer.html %}
 </html>
